# juicyj

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.rst  circle.yml
docs/: a1.md  a4.md  a5.md
extra/: language_specification.joos
grammar/: cfg generator.py  joos.cfg  joos.grammar  joos.lr1
grammar/cfgerizer/: cfgerize.py
grammar/jlalr/: Jlalr1.java
src/: lib.rs  main.rs
src/analysis/: mod.rs
src/analysis/environment/: class.rs  classorinterface.rs  constructor.rs  field.rs  interface.rs  method.rs  mod.rs  parameter.rs  variable.rs
src/analysis/types/: body.rs  check.rs  inheritance.rs  mod.rs  obj.rs
src/common/: ast.rs  error.rs  mod.rs  tokens.rs
src/environment/: mod.rs
src/error/: ast.rs  lexer.rs  message.rs  mod.rs  parser.rs  weeder.rs
src/generator/: mod.rs
src/generator/asm/: helper.rs  mod.rs
src/generator/body/: arrayaccess.rs  arraycreationexpression.rs  assignment.rs  booleanoperation.rs  booleanvalue.rs  castexpression.rs  charvalue.rs  classinstancecreationexpression.rs  comparison.rs  fieldaccess.rs  forstatement.rs  ifelsestatement.rs  ifstatement.rs  instanceof.rs  localvariabledeclaration.rs  math.rs  methodinvocation.rs  mod.rs  name.rs  not.rs  nullvalue.rs  numvalue.rs  returnstatement.rs  statement.rs  strvalue.rs  this.rs  whilestatement.rs
src/lexer/: error.rs  identifier.rs  mod.rs  tokenizer.rs
src/parser/: dfa.rs  error.rs  generator.rs  mod.rs  tree.rs
src/scanner/: mod.rs
src/weeder/: mod.rs  validator.rs
tests/: _features.rs  _special.rs  _stdlib.rs  a0_features.rs  a1_fail.rs  a1_pass.rs  a1_succeed.rs  a2_fail.rs  a2_pass.rs  a3_fail.rs  a3_pass.rs  a4_fail.rs  a4_pass.rs  a5_pass.rs  features.rs  language_features.joos  lexer.rs  public_fail.rs  public_succeed.rs
tests/cases/: J1_01.java
tests/common/: mod.rs
(+117 files in other folders)
