[package]
name = "juicyj"
version = "0.1.0"
authors = ["Kevin James <KevinJames@thekev.in>", "Steven Locke <s3locke@student.cs.uwaterloo.ca>"]
repository = "https://github.com/waterloo-cs444/cs444-w17-group3"
readme = "README.rst"

include = ["src/**/*", "Cargo.toml"]

[dependencies]
env_logger = "0.3.5"
log = "0.3.6"

[profile]
[profile.dev]  # `cargo build`
opt-level = 0
debug = true
debug-assertions = true

[profile.release]  # `cargo build --release`
opt-level = 3
debug = false
debug-assertions = false

[profile.test]  # `cargo test`
opt-level = 0
debug = true
debug-assertions = true

[profile.bench]  # `cargo bench`
opt-level = 3
debug = false
debug-assertions = false

[profile.doc]  # `cargo doc`
opt-level = 0
debug = true
debug-assertions = true
